--- a/documentation/docs/components/operators/snippets/node-perf-mixnet.mdx
+++ b/documentation/docs/components/operators/snippets/node-perf-mixnet.mdx
@@ -50,7 +50,7 @@ First three points have binary values of either `0` or `1`, with a following log
 **Only if ALL conditions above are `True` the node can have any chance to be selected, as otherwise the probability will always be 0.**
 
 <Callout type="info" emoji="ℹ️">
-Besides these values, the API also checks whether the node is bonded in Mixnet smart contract as a Nym Node or legacy node (Mixnode or Gateway). **Only nodes bonded as Nym Node in Mixnet smart contract can be selected to the Rewrded set. Thus, if you haven't migrated your node yet, please [follow these steps](/nodes/nym-node/bonding#migrate-to-nym-node-in-mixnet-smart-contract)!**
+Besides these values, the API also checks whether the node is bonded in Mixnet smart contract as a Nym Node or legacy node (Mixnode or Gateway). **Only nodes bonded as Nym Node in Mixnet smart contract can be selected to the Rewrded set. Thus, if you haven't migrated your node yet, please [follow these steps](/operators/nodes/nym-node/bonding#migrate-to-nym-node-in-mixnet-smart-contract)!**
 </ Callout>
 
 #### Versions Behind Calculation
