rework of sdk docs

--- a/documentation/docs/pages/developers/rust.mdx
+++ b/documentation/docs/pages/developers/rust.mdx
@@ -11,6 +11,4 @@ This upgrade will affect the interface of the SDK dramatically, and will be coup
 It will also be coupled with the documentation of the SDK on [crates.io](https://crates.io/).
 </Callout>
 
-The Rust SDK allows developers building applications in Rust to import and interact with Nym clients as they would any other dependency, instead of running the client as a separate process on their machine.
-
-Check the [development status](./rust/development-status) page to see the various modules that make up the SDK, and the [FFI](./rust/ffi) page for Go/C++ developers.
+The Rust SDK allows developers building applications in Rust to import and interact with Nym clients as they would any other dependency, instead of running the client as a separate process on their machine. TODO REWRITE
