--- a/documentation/docs/pages/developers/native.mdx
+++ b/documentation/docs/pages/developers/native.mdx
@@ -9,6 +9,8 @@ You might want to embed Nym Clients in both sides of your app, and have them sen
 
 ![](/images/developers/nym-arch-client-to-client.png)
 
+There are several options available:
+
 ### Stream Wrapper Module
 Exposes `MixSocket`/`MixStream` abstractions that can be split a reader/writer halves that consumes bytes, with an interface inspired by `std::net::TcpStream`. For developers who just want to read/write bytes to/from the Mixnet working with something socket-like.
 
@@ -18,15 +20,16 @@ Exposes `MixSocket`/`MixStream` abstractions that can be split a reader/writer h
 ### Mixnet & Client Pool Modules
 The Mixnet module of the SDK exposes low level connection functionality and the Mixnet Client. The Client Pool is one answer to concurrency, and allows developers to run several Nym Clients at once which can be quickly used.
 
-<Callout type="info" emoji="ℹ️">
-  This approach might be useful if you want to build custom connection logic, but `MixSocket`/`MixStream` will probably be sufficient for the majority of usecases, and is itself built on top of this module. We recommend developers start there with regards to integrations.
-</Callout>
+This approach might be useful if you want to build custom connection logic, but **`MixSocket`/`MixStream` will probably be sufficient for the majority of usecases** where developers just want to send and receive traffic as streams.
 
 - docs TODO LINK
 - examples TODO LINK
 
-### [Soon to be deprecated] TcpProxy Module
-This module has been essentially superceded by the `MixSocket`. **New features will not be added to it.** The main drawback of this (which is fixed with `MixSocket`/`MixStream`) is that TLS is impossible, as it exposes a localhost port for the consuming process to communicate with.
+### TcpProxy Module
+<Callout type="warning" emoji="⚠️">
+    This module has been superceded by the Stream Wrapper module, and will soon be deprecated. **New features will not be added to it.** The main drawback of this (which is fixed with `MixSocket`/`MixStream`) is that TLS is impossible, as it exposes a localhost port for the consuming process to communicate with.
+</Callout>
+A pair of abstractions built for use in a client-server setup, which both expose a `localhost` TCP Socket which apps can read/write bytes to/from.
 
 - docs TODO LINK
 - examples TODO LINK
@@ -36,16 +39,22 @@ For developers who are only able to control the client-side code, and/or need to
 
 ![](/images/developers/nym-arch-ip-routing.png)
 
-### Security Considerations
-Since traffic is only packaged as Sphinx until it gets to the Exit Gateway, where it is unwrapped into either HTTPS packets (by a Network Requester) or IP packets (by an IP Packet Router), the last hop between the Gateway travels as normal internet traffic. As such, this option has fewer protections than the E2E option against a global passive adversary, but still grants you timing obfuscation and sender-receiver unlinkability between your client software and whatever service it is interacting with.
+<Callout type="warning">
 
-### 1: SOCKS Client
+    ### Security Considerations
+
+    Since traffic is only packaged as Sphinx until it gets to the Exit Gateway, where it is unwrapped into either HTTPS packets (by a Network Requester) or IP packets (by an IP Packet Router), the last hop between the Gateway and the remote host **travels as normal internet traffic**.
+
+    As such, this option has fewer protections than the E2E option against a global passive adversary, but still grants you timing obfuscation and sender-receiver unlinkability between your client software and whatever service it is interacting with.
+</Callout>
+
+### SOCKS Client
 Developers with apps that support SOCKS4,4a, or 5 can use the Socks Client exposed by the Mixnet module. This uses the Network Requester service of the chosen Exit Gateway to interact with the remote host via the chosen SOCKS proxy protocol. The Network Requester uses SURBs to anonymously reply to the original sender with whatever response it gets from the remote host.
 
 - docs TODO LINK
 - example TODO LINK
 
-### 2: `IPMixStream`
+### `IPMixStream`
 This is a version of the `MixSocket` that consumes IP packets before wrapping them in Sphinx and forwarding through the Mixnet to the IP Packet Router of the chosen Exit Gateway, where they are unwrapped and treated as normal IP packets. The IPR uses SURBs to anonymously reply to the original sender with whatever response it gets from the remote host.
 
 <Callout type="info" emoji="ℹ️">
@@ -55,7 +64,7 @@ This is a version of the `MixSocket` that consumes IP packets before wrapping th
 - docs TODO LINK
 - examples TODO LINK
 
-### 3: `MixTCP`
+### `MixTCP`
 A proof of concept TCP/IP crate containing a [`smoltcp`](https://docs.rs/smoltcp/latest/smoltcp/index.html) `device` that uses the Mixnet for transport. Examples of using this to make a TLS handshake and perform an HTTPS request can be found linked below.
 
 <Callout type="info" emoji="ℹ️">
