--- a/documentation/docs/pages/developers/typescript/playground/mixfetch.mdx
+++ b/documentation/docs/pages/developers/typescript/playground/mixfetch.mdx
@@ -10,4 +10,9 @@ import { Callout } from 'nextra/components'
 
 
 <MixFetch />
+
+<Callout type="info">
+    Open your browser's console to see the connection and send/receive logging for this example.
+</Callout>
+
 <FormattedMixFetchExampleCode />
