--- a/documentation/docs/pages/developers/typescript/playground/traffic.mdx
+++ b/documentation/docs/pages/developers/typescript/playground/traffic.mdx
@@ -7,5 +7,9 @@ import FormattedTrafficExampleCode from '../../../../code-examples/sdk/typescrip
 
 Use this tool to experiment with the mixnet: send and receive messages!
 
+<Callout type="info">
+    Open your browser's console to see the connection and send/receive logging for this example.
+</Callout>
+
 <Traffic />
 <FormattedTrafficExampleCode />
