--- a/documentation/docs/pages/developers/native.mdx
+++ b/documentation/docs/pages/developers/native.mdx
@@ -29,7 +29,7 @@ This approach might be useful if you want to build custom connection logic, but 
 
 ### TcpProxy Module
 { /* <Callout type="warning" emoji="⚠️">
-    This module has been superceded by the Stream Wrapper module, and will soon be deprecated. **New features will not be added to it.** The main drawback of this (which is fixed with `MixSocket`/`MixStream`) is that TLS is impossible, as it exposes a localhost port for the consuming process to communicate with.
+    This module has been superseded by the Stream Wrapper module, and will soon be deprecated. **New features will not be added to it.** The main drawback of this (which is fixed with `MixSocket`/`MixStream`) is that TLS is impossible, as it exposes a localhost port for the consuming process to communicate with.
 </Callout> */ }
 A pair of abstractions built for use in a client-server setup, which both expose a `localhost` TCP Socket which apps can read/write bytes to/from.
 
