--- a/documentation/docs/pages/developers/rust/ffi.mdx
+++ b/documentation/docs/pages/developers/rust/ffi.mdx
@@ -2,17 +2,6 @@
 # FFI Bindings
 import { Callout } from 'nextra/components';
 
-<Callout type="warning">
-  There will be a breaking SDK upgrade in the coming months. This upgrade will make the SDK a lot easier to build with.
-
-This upgrade will affect the interface of the SDK dramatically, and will be coupled with a protocol change - stay tuned for information on early access to the new protocol testnet.
-
-It will also be coupled with the documentation of the SDK on [crates.io](https://crates.io/).
-</Callout>
-<Callout type="info" emoji="ℹ️">
-  We are working on the intitial versions of the FFI code to allow developers to experiment and get feedback. Please get in touch if you think the FFI bindings are lacking certain functionality.
-</Callout>
-
 We currently have FFI bindings for Go and C/C++. See the table below to check the coverage of functionality we expect devs would like to see.
 
 The [`nym/sdk/ffi`](https://github.com/nymtech/nym/tree/master/sdk/ffi) directory has the following structure:
@@ -50,7 +39,7 @@ At the time of writing the following functionality is not exposed to the shared 
 - `Socks5::new()`: creation and use of the [socks5/4a/4 proxy client](./mixnet/examples/socks).
 
 ## TcpProxy Module
-A connection abstraction which exposes a local TCP socket which developers are able to interact with basically as expected, being able to read/write to/from a bytestream, without really having to take into account the workings of the Mixnet/Sphinx/the [message-based](../concepts/messages) format of the underlying client.
+A connection abstraction which exposes a local TCP socket which developers are able to interact with basically as expected, being able to read/write to/from a bytestream, without really having to take into account the workings of the Mixnet/Sphinx/the message-based format of the underlying client.
 
 <Callout type="info" emoji="ℹ️">
   At the time of writing this functionality is **only** exposed to Go. C/C++ bindings will follow in the future in a larger update to the C FFI.
