--- a/documentation/docs/pages/operators/nodes/nym-node/configuration.mdx
+++ b/documentation/docs/pages/operators/nodes/nym-node/configuration.mdx
@@ -375,7 +375,7 @@ operation check_nymtun_iptables completed successfully.
 ###### 5. Remove old and apply new rules for wireguad routing
 
 ```sh
-/network_tunnel_manager.sh remove_duplicate_rules nymwg
+./network_tunnel_manager.sh remove_duplicate_rules nymwg
 
 ./network_tunnel_manager.sh apply_iptables_rules_wg
 ```
