--- a/documentation/docs/components/operators/snippets/wg-exit-policy-testing-from-outside.mdx
+++ b/documentation/docs/components/operators/snippets/wg-exit-policy-testing-from-outside.mdx
@@ -12,7 +12,7 @@ Here are a few ways you can ensre your WireGuard exit policy is working correctl
 
 - It shouldn't load, but if you navigate to some of the accepted ports, like[`portquiz.net:443`](http://portquiz.net:443) it should all work
 
-###### 2. Test it from your local terminal
+###### 2. Testing from your local terminal
 
 - Install these dependencies on your local machine:
 ```shell
