--- a/documentation/docs/components/operators/snippets/routing-conf.mdx
+++ b/documentation/docs/components/operators/snippets/routing-conf.mdx
@@ -62,7 +62,7 @@ Networking configuration across different ISPs and various operation systems doe
       <Tabs items={[
         <strong>New <code>nym-node</ code> full configuration</strong>,
         <strong>Existing <code>nym-node</ code> full configuration</strong>,
-        <strong>Step-by-step or Pprtial configuration</strong>
+        <strong>Step-by-step or Partial configuration</strong>
       ]} defaultIndex={0}>
         <Tabs.Tab>
 This design is meant for operators setting up a new node on a fresh machine and it will result with a complete server readiness for routing as Entry Gateway and Exit Gateway in both Mixnet and WireGuard mode. 
@@ -80,9 +80,14 @@ chmod +x network-tunnel-manager.sh && \
 
 - **If you setting up a new node and not upgrading an existing one, keep it running and [bond](/operators/nodes/nym-node/bonding.mdx) your node now! Then come back here and follow the rest of the configuration.**
         
-###### 3. Execute complete network configuration:
+###### 3. Run command for configuration:
+- For nodes with WireGuard enabled:
 ```sh
-./network-tunnel-manager.sh complete_networking_setup
+./network-tunnel-manager.sh complete_networking_configuration
+```
+- For nodes with WireGuard disabled:
+```sh
+./network-tunnel-manager.sh full_tunnel_setup
 ```
           </ Steps>
         </Tabs.Tab>
@@ -98,9 +103,14 @@ chmod +x network-tunnel-manager.sh && \
 ./network-tunnel-manager.sh --help
 ```
         
-###### 2. Execute complete network configuration:
+###### 2. Run command for configuration:
+- For nodes with WireGuard enabled:
 ```sh
-./network-tunnel-manager.sh complete_networking_setup
+./network-tunnel-manager.sh complete_networking_configuration
+```
+- For nodes with WireGuard disabled:
+```sh
+./network-tunnel-manager.sh full_tunnel_setup
 ```
           </ Steps>
         </Tabs.Tab>
