full_tunnel_setup to nym_tunnel_setup

--- a/documentation/docs/components/operators/snippets/routing-conf.mdx
+++ b/documentation/docs/components/operators/snippets/routing-conf.mdx
@@ -87,7 +87,7 @@ chmod +x network-tunnel-manager.sh && \
 ```
 - Nodes with **WireGuard disabled**: Does everything like the command above *without WireGuard exit policy*
 ```sh
-./network-tunnel-manager.sh full_tunnel_setup
+./network-tunnel-manager.sh nym_tunnel_setup
 ```
           </ Steps>
         </Tabs.Tab>
@@ -110,7 +110,7 @@ chmod +x network-tunnel-manager.sh && \
 ```
 - Nodes with **WireGuard disabled**: Does everything like the command above *without WireGuard exit policy*
 ```sh
-./network-tunnel-manager.sh full_tunnel_setup
+./network-tunnel-manager.sh nym_tunnel_setup
 ```
           </ Steps>
         </Tabs.Tab>
